src/objects/Progress_Meter__c.object
<CustomObject>
    <description>Stores progress data (example percent complete data)</description>
    <fields>
        <fullName>Items_Complete__c</fullName>
        <description>number of items completed</description>
        <label>Items Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <description>formula field representing  (Items_Complete__c/Total_Items__c) *100</description>
        <formula>(Items_Complete__c/Total_Items__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Progress_Text__c</fullName>
        <description>text field allowing storage of free text for progress indication (such as “4/4 – 100% complete”)</description>
        <label>Progress Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Items__c</fullName>
        <description>total number of items to be completed</description>
        <label>Total Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhatID_Object__c</fullName>
        <description>type of the object whose progress is being measured</description>
        <label>WhatID Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatId__c</fullName>
        <description>the ID of the object whose progress is being measured</description>
        <label>WhatId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Progress Meter</label>
    <nameField>
        <label>Progress Meter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progress Meter</pluralLabel>
    <recordTypes>
        <fullName>Person_Registry</fullName>
        <active>true</active>
        <label>Person Registry</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>